// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/gradle-wrapper/extract extractPackageFile() extracts all version line 1`] = `
Array [
  Object {
    "checksumLineNumber": 6,
    "currentValue": "4.10.3",
    "datasource": "gradleVersion",
    "depName": "gradle",
    "depType": "gradle-wrapper",
    "gradleWrapperType": "all",
    "lineNumber": 5,
    "versionScheme": "semver",
  },
]
`;

exports[`lib/manager/gradle-wrapper/extract extractPackageFile() extracts bin version line 1`] = `
Array [
  Object {
    "currentValue": "4.8.0",
    "datasource": "gradleVersion",
    "depName": "gradle",
    "depType": "gradle-wrapper",
    "gradleWrapperType": "bin",
    "lineNumber": 4,
    "versionScheme": "semver",
  },
]
`;
